--- a/pollster/templates/polls/detail.html
+++ b/pollster/templates/polls/detail.html
@@ -13,7 +13,7 @@
   <!-- Cross site protection -->
   {% csrf_token %}
   <!-- iterate over poll choices -->
-  {% for choice in question.choice_set.all %}
+  {% for choice in question.choices.all %}
     <div class="form-check">
       <input type="radio" name="choice" class="form-check-input" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
       <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
