--- a/pollster/templates/polls/results.html
+++ b/pollster/templates/polls/results.html
@@ -4,7 +4,7 @@
 <h1 class="mb-5 text-center">{{ question.question_text }}</h1>
 
 <ul class="list-group mb-5">
-  {% for choice in question.choice_set.all %}
+  {% for choice in question.choices.all %}
   <li class="list-group-item">
     {{ choice.choice_text }}
     <span class="badge bg-success float-right">{{ choice.votes }} vote{{ choice.votes | pluralize }}</span>
